agregad pagina de contacto

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Pruebas HTML</title>
+    </head>
     <body bgcolor="#ED5B33" text="white">
         <h1><u>Hola Mundo!</u></h1>
+        <a href="contacto.html">Link hacia otra pagina</a>
         <h2>Este es título</h2>
         <h3>Titlo h3</h3>
         <h4>Titlo h4</h4>
