agregada pagina de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -5,8 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contacto</title>
 </head>
-<body>
+<body style="background-color: #C8D1ED; color: #50006E;"">
     <h1>Pagina de contacto</h1>
+    <div class="texto" style="background-color: #3564DA; color: white;">
+        <p>Esto es un parrafo de texto</p>
+        <p>Este es otro parrafo</p>
+    </div>
+    <div class="lista-desordenada" style="background-color: #fff;;">
+        <ul>
+            <li>primer item</li>
+            <li>segundo item</li>
+            <li>tercer item</li>
+            <li>cuarto item</li>
+        </ul>
+    </div>
+    <div class="lista-ordenada">
+        <ol start="3" type="I">
+            <li><a href="pagina1.html">item 1</a></li>
+            <li><a href="pagina2.html">item 2</a></li>
+            <li><button>item 3</button></li>
+            <li><button>item 4</button></li>
+            <li>item 5</li>
+            <li>item 6</li>
+        </ol>
+    </div>
     <a href="index.html">inicio</a>
 </body>
 </html>
