agregada hoja de estilo

--- a/pagina1.html
+++ b/pagina1.html
@@ -6,6 +6,13 @@
     <title>pagina 1</title>
 </head>
 <body>
-    
+    <div class="pelicula" style="background-color: black; color: white; width: 400px;">
+        <h2>El señor de los novillos</h3>
+        <img src="novillo.jpg" width="250" height="300"/>
+        <p style="color: yellow;">
+            Sigue la historia de la <u>vaca lola</u> a travez de su viaje<br>
+            sobre las tierras de la <u><b>paramordor</b></u>
+        </p>
+    </div>
 </body>
 </html>
