--- a/pagina2.html
+++ b/pagina2.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pagina 2</title>
+    <style>
+        div {
+            background-color: black; 
+            color: wheat; 
+            width: 400px
+        }
+        p {
+            color: yellow
+        }
+        .pelicula2 {
+            background-color: bisque;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="pelicula1">
+        <h2>Alien; el octavo pasajero</h2>
+        <img src="alien.jpeg"width="250" height="300">
+        <p>
+            descrićion de la peliculafixed
+        </p>
+    </div>
+    <div class="pelicula2">
+        <h2>Alien 2</h2>
+        <p>
+            Descripcion de pelicula 2
+        </p>
+    </div>
 </body>
 </html>
