--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Pruebas HTML</title>
-    </head>
-    <body bgcolor="#ED5B33" text="white">
-        <h1><u>Hola Mundo!</u></h1>
-        <a href="contacto.html">Link hacia otra pagina</a>
-        <h2>Este es título</h2>
-        <h3>Titlo h3</h3>
-        <h4>Titlo h4</h4>
-        <h5>Titlo h5</h5>
-        <h6>Titlo h6</h6>
-        <p>Este es un <b>parrafo</b>, <u>aca esta</u> el contenido de la pagina</p>
-    </body>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Página principal</title>
+</head>
+<body>
+    <header>
+        <h1>Aprendiendo HTML</h1>
+        <p>Clases CFL 414 La Matanza</p>
+    </header>
+    <div>
+
+    </div>
+    <footer>
+        <p>Clases para el curso de programación 2025</p>
+    </footer>
+</body>
 </html>
