--- a/index.html
+++ b/index.html
@@ -4,6 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página principal</title>
+    <!--
+}  La etiqueta style nos permite definir estilos fuera de las propiedades
+   de las etiquetas. Utilizamos selectores para seleccionar el o los elementos a modificar.
+    -->
+    <style>
+        /*
+        El primer selector que vemos es el de etiqueta.
+        Solo debemos invocarlo con su nombre
+        El formato es el siguiente. selector{propiedad1: valor1; propiedad2: valor2} 
+        */
+        header{
+            background-color: aqua;
+            text-align: center;
+        }
+
+        body{
+            margin-left: 40px;
+            margin-right: 40px;
+        }
+
+        footer{
+            background-color: black;
+            color: white;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <header>
