--- a/index.html
+++ b/index.html
@@ -17,17 +17,39 @@
         header{
             background-color: aqua;
             text-align: center;
+            padding-top: 20px;
+            padding-bottom: 20px;
         }
 
         body{
             margin-left: 40px;
             margin-right: 40px;
+            background-color: bisque;
         }
 
         footer{
             background-color: black;
             color: white;
             text-align: center;
+        }
+        /*El selector de ID. Con el # adelante, podemos seleccionar los elementos
+        con el id="contenedor*/
+        #contenedor{
+            background-color: beige;
+            display:flex;
+            flex-direction: row;
+        }
+        /*El simbolo > es un combinador, el siguiente estilo va a selecctionar
+        a todos los divs que sean hijos directos del elemento con id="container"*/
+
+        #contenedor > div{
+            flex-flow: column;
+            margin-top: 10px;
+            margin-bottom: 10;
+            background-color: aquamarine;
+            border-color: black;
+            border-radius: 15px;
+            border-style: solid;
         }
     </style>
 </head>
@@ -36,9 +58,27 @@
         <h1>Aprendiendo HTML</h1>
         <p>Clases CFL 414 La Matanza</p>
     </header>
-    <div>
+    <!--COMIENZA EL CONTENEDOR-->
+       <!--En este contenedor, vamos a mostrar el contenido de nuestra pagina
+       a la izquierda un menu, y a la derecha el contenido en si
+       Utilizamos la priiedad display=flex para que los divs hijos se acomooden
+       a la izquierda, y luego, flex-grow para darles tamaño--><
+    <div id="contenedor">
+        <div style="flex-grow: 2;">
+            <h3>Menu</h3>
+            <ul>
+                <li>Link 1</li>
+                <li>Link 2</li>
+                <li>Link 3</li>
+                <li>Link 4</li>
+            </ul>
+        </div>
+        <div style="flex-grow: 10;">
+            <h3>Contenido</h3>
+        </div>
 
     </div>
+    <!--COMIENZA EL FOOTER-->
     <footer>
         <p>Clases para el curso de programación 2025</p>
     </footer>
