cambios menores en layouts.css y layouts.html

--- a/layouts.html
+++ b/layouts.html
@@ -56,6 +56,40 @@
         <div>2</div>
         <div>3</div>
     </div>
+    <h6>Wrap</h6>
+    <p>La propiedad flex-wrap especifica si los elementos flexibles deben ser envueltos por su div padre o no, si es que no hay suficiene espacio en la linea del div</p>
+    <ul>
+        <li>nowrap - Es el valor por defecto, los items no se envuelven</li>
+        <li>wrap - los items se envuelven de ser necesario</li>
+        <li>wrap-reverse - Los items se envuelven de ser necesario pero en orden inverso</li>
+    </ul>
+    <div id="flex-container-3">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>8</div>
+        <div>9</div>
+        <div>10</div>
+    </div>
+    <h6>justify-content</h6>
+    <p> se utiliza para alinear los items flexibles cuando estos no utilizan yodo el espacio disponible en el eje principal (horizontal)</p>
+    <ul>
+        <li>center - justifica al centro</li>
+        <li>flex-start - justifica al inicio del div padre</li>
+        <li>flex-end - justifica al final del div padre</li>
+        <li> space-around - Muestra los items flexibles con espacios a la derecha e izquierda</li>
+        <li>space-evenly - crea un espaciado parejo entre el primer div hijo y el ultimo</li> 
+        <li>space-between - acomoda el primer div hijo al inicio del div padre y el ultimo div hijo al final del div padre, todos los elementos intermedios se reparten equitativamente</li>
+    </ul>
+    <div id="flex-container-4">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+    </div>
     <footer>
         <p>Clases para el curso de programación 2025</p>
     </footer>
