--- a/layouts.html
+++ b/layouts.html
@@ -12,6 +12,9 @@
         <h1>Aprendiendo HTML</h1>
         <p>Clases CFL 414 La Matanza</p>
     </header>
+        <div id="nav">
+        <a href="./index.html">Home</a>
+    </div>
     <div>
         <h3>Tipos de layouts</h3>
         <h6>FlexBox</h6>
